# MPI_time_measuring

./: CMakeLists.txt  README.md  lol.h  main.c  misc_for_my_funcs.c  my_functions.c  run_MPI_functions.c  run_my_functions.c  test1.txt  test_my_functions.c
